[bumpversion]
current_version = 1.0.0
tag = True
commit = True

[metadata]
name = statadict
author = Adrian Tuzimek
author_email = tuziomek@gmail.com
description = Utility for parsing Stata dictionary files for usage with Pandas.
long-description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atudomain/statadict
packages = setuptools.find_packages()
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
keywords = pandas, stata, dictionary, parse, import
python_requires = >=3.6

[options]
use_scm_version = True
packages = find:
include_package_data = True
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0
    sphinx>=2.2.0
    sphinx_rtd_theme>=0.4.3
    pytest_runner
    wheel
tests_require =
	pytest

[aliases]
test = pytest

[build_sphinx]
source-dir = docs
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html